<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.capstone.herbalease.view.fitur.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_profileFragment"
            app:destination="@id/navigation_profile" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.capstone.herbalease.view.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/activity_search" />

    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.capstone.herbalease.view.ingredients_detail.IngredientsDetailFragment"
        android:label="@string/title_detail"
        tools:layout="@layout/activity_ingredients_detail" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.capstone.herbalease.view.fitur.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/navigation_discuss"
        android:name="com.capstone.herbalease.view.fitur.diskusi.DiscussionFragment"
        android:label="fragment_discussion"
        tools:layout="@layout/fragment_discussion" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.capstone.herbalease.view.fitur.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_editProfileFragment"
            app:destination="@id/editProfileFragment" />
    </fragment>

    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.capstone.herbalease.view.fitur.profile.EditProfileFragment"
        android:label="fragment_edit_profile"
        tools:layout="@layout/fragment_edit_profile" >
        <argument
            android:name="profileData"
            app:argType="com.capstone.herbalease.data.model.retrofit.ProfileResponse" />
        <action
            android:id="@+id/action_editProfileFragment_to_navigation_profile"
            app:destination="@id/navigation_profile"
            app:popUpToInclusive="true"
            app:popUpTo="@id/navigation_profile" />
    </fragment>

</navigation>
